qc pass: openvpn with none hash
qc pass: satp with none encryption
qc pass: satp with none hash
qc pass: skip with none encryption
qc pass: skip with none hash
qc pass: swipe with none encryption
qc pass: swipe with none hash
---------------------------------- 2022-01-30 08:49:57
qc pass: p4lang: openvpn with none encryption
qc pass: p4lang: openvpn with none hash
qc pass: p4lang: macsec with none encryption
qc pass: p4lang: macsec with none hash
---------------------------------- 2022-01-30 14:39:53
qc pass: macsec with aes128gcm and hash
qc pass: macsec with aes192gcm and hash
qc pass: macsec with aes256gcm and hash
qc pass: macsec with aes128gcm and aead
qc pass: macsec with aes192gcm and aead
qc pass: macsec with aes256gcm and aead
---------------------------------- 2022-01-30 14:48:15
qc pass: p4lang: macsec with aes128gcm and hash
qc pass: p4lang: macsec with aes192gcm and hash
qc pass: p4lang: macsec with aes256gcm and hash
qc pass: p4lang: macsec with aes128gcm and aead
qc pass: p4lang: macsec with aes192gcm and aead
qc pass: p4lang: macsec with aes256gcm and aead
---------------------------------- 2022-02-03 07:55:32
todo: p4dpdk multiseg rx/tx loop
---------------------------------- 2022-02-05 03:03:13
no qc pass: bridged mac rewrite
qc pass: bridge mac rewrite
qc pass: bridge port security
qc pass: bridge static address
---------------------------------- 2022-02-07 02:29:39
qc pass: bgp routemap filtering with asend
qc pass: bgp routemap filtering with asend with soft-reconfig
qc pass: bgp routepolicy filtering with asend
qc pass: bgp routepolicy filtering with asend with soft-reconfig
qc pass: bgp routemap filtering with asmid
qc pass: bgp routemap filtering with asmid with soft-reconfig
qc pass: bgp routepolicy filtering with asmid
qc pass: bgp routepolicy filtering with asmid with soft-reconfig
---------------------------------- 2022-02-07 22:00:35
todo: punt ace mode to the dataplanes, use it for reflexive acls, consider for ip inspect usage