@@ -10,8 +10,8 @@
  :active { color: white }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v22.2.7-cur, done by cs@nop.<br/>
-tested: 2022-02-08 02:40:55, took 00:07:02, with 100 workers, on 2664 cases, 0 failed, 0 traces, 2 retries<br/>
+release: freeRouter v22.2.8-cur, done by cs@nop.<br/>
+tested: 2022-02-08 10:15:50, took 00:07:30, with 100 workers, on 2665 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1333,6 +1333,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl52.tst">p4lang-acl52.tst</a></td><td>success</td><td>p4lang: priority flowspec</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl53.tst">p4lang-acl53.tst</a></td><td>success</td><td>p4lang: ingress amt access list</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl54.tst">p4lang-acl54.tst</a></td><td>success</td><td>p4lang: egress amt access list</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl55.tst">p4lang-acl55.tst</a></td><td>success</td><td>p4lang: reflexive access list</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt01.tst">p4lang-crypt01.tst</a></td><td>success</td><td>p4lang: macsec with des</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt02.tst">p4lang-crypt02.tst</a></td><td>success</td><td>p4lang: macsec with 3des</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt03.tst">p4lang-crypt03.tst</a></td><td>success</td><td>p4lang: macsec with aes128cbc</td></tr>
