@@ -12871,3 +12871,5 @@ qc pass: bgp routepolicy filtering with asmid
 qc pass: bgp routepolicy filtering with asmid with soft-reconfig
 ---------------------------------- 2022-02-07 22:00:35
 todo: punt ace mode to the dataplanes, use it for reflexive acls, consider for ip inspect usage
+---------------------------------- 2022-02-08 10:08:19
+qc pass: p4lang: reflexive access list
